<resources>
    <string name="app_name">BibloTechPi</string>

    <!-- Strings related to signup -->
    <string name="sign_up">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="if_not_registered">Sign up If you are not registered</string>

    <!-- Strings related to MyPage -->
    <string name="books_i_rent">Books Rented By Me</string>
    <string name="books_i_read">Books I read</string>
    <string name="posts_i_wrote">Posts I wrote</string>
    <string name="search">Search Books</string>
    <string name="qr_scan">Scan QR code</string>

    <!-- Strings related to All Activities -->
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>

    <!-- Strings related to Post related Activities -->
    <string name="title_page_list">My Page</string>
    <string name="title_page_detail">Page Detail</string>

    <!-- Strings related to Write Post related Activities -->
    <string name="title_write_post">Write Post</string>
    <string name="warning_on_title">Give Me a Post Title</string>


    <!-- Strings related to Search Activity related Activities -->
    <string name="search_by">Search By</string>
    <string-array name="search_criterias">
        <item>Title</item>
        <item>Author</item>
        <item>Publisher</item>
    </string-array>
    <!-- Strings related to Settings Fragment-->
    <string name="server_address">Server Address</string>
    <string name="set_server_address">Set Server Address</string>

    <!--Error Messages-->
    <string name="shared_pref_error">Invalid Shared Preferences Error</string>
    <string name="server_side_error">Server has problem...</string>
</resources>
