<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/profileFragmentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </FrameLayout>

    <Button
        android:id="@+id/bt_booksRentedByMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="@integer/rentedByMeButtonTag"
        android:text="@string/books_i_rent"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/bt_booksIread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="@integer/booksIreadButtonTag"
        android:text="@string/books_i_read"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/bt_postIwrote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="@integer/postIwroteButtonTag"
        android:text="@string/posts_i_wrote"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/bt_searchBooks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToSearchActivity"
        android:tag="@integer/searchButtonTag"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size" />

    <Button
        android:id="@+id/bt_qrCodeActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="@integer/scanQrCodeTag"
        android:text="@string/qr_scan"
        android:textAllCaps="false"
        android:textSize="@dimen/button_font_size" />


</LinearLayout>
